RESOLVED FIXED228028
macOS Safari network sessions not being marked as being from a browser
https://bugs.webkit.org/show_bug.cgi?id=228028
Summary macOS Safari network sessions not being marked as being from a browser
Kate Cheney
Reported 2021-07-16 10:34:38 PDT
macOS Safari network sessions not being marked as being from a browser
Attachments
Patch (3.21 KB, patch)
2021-07-16 10:42 PDT, Kate Cheney
no flags
Kate Cheney
Comment 1 2021-07-16 10:42:51 PDT
Brent Fulgham
Comment 2 2021-07-16 13:12:27 PDT
Comment on attachment 433684 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=433684&action=review r=me > Source/WebKit/NetworkProcess/cocoa/NetworkSessionCocoa.mm:-86 > -#define NETWORK_SESSION_COCOA_ADDITIONS_1 Always nice to see this stuff go away.
EWS
Comment 3 2021-07-16 14:26:21 PDT
Committed r280001 (239743@main): <https://commits.webkit.org/239743@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 433684 [details].
Radar WebKit Bug Importer
Comment 4 2021-07-16 14:27:18 PDT Comment hidden (obsolete)
Kate Cheney
Comment 5 2021-07-16 14:28:42 PDT
The correct radar is rdar://80648664
Note You need to log in before you can comment on or make changes to this bug.