Cherry-pick r280001. rdar://problem/80788656

macOS Safari network sessions not being marked as being from a browser
    https://bugs.webkit.org/show_bug.cgi?id=228028
    <rdar://problem/80648664>

    Reviewed by Brent Fulgham.

    Move WebKitAdditions to open source to communicate full web browser
    status to the networking stack. In the macOS case, we don't have
    a full browser entitlement, so we should check for Safari.

    * NetworkProcess/cocoa/NetworkSessionCocoa.mm:
    (WebKit::SessionWrapper::initialize):
    The name com.apple.WebKit.InAppBrowser is not the most accurate name,
    but changing it would require syncing with other parts of the network
    stack. We should do this in a separate bug.

    Canonical link: https://commits.webkit.org/239743@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280001 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/239676.5@safari-612.1.24.11-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-612.1.24.11-branch@280185 268f45cc-cd09-0410-ab3c-d52691b4dbfc